# zone-h-scraper

./: .dockerignore  .env.defaults  Dockerfile  README.md  cookies.jsonl  docker-compose.yml  pyproject.toml  requirements.txt
data/: data.jsonl
data-sample/: data of 1-1-2025.jsonl  data of 2-1-2025.jsonl
tests/: test.html  test.py
zoneh/: browser.py  config.py  helpers.py  login.py  main.py  schemas.py  scrapers.py  utils.py
